# inorbit-omron-connector

./: .dockerignore  .gitattributes  .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  REUSE.toml  pyproject.toml
.github/workflows/: inorbit_omron_workflows.yml
config/: .gitignore  example.env  fleet.example.yaml
docker/: Dockerfile  build.sh  docker-compose.example.yaml
inorbit_omron_connector/: __init__.py  inorbit_omron_connector.py
inorbit_omron_connector/src/: __init__.py  arcl_client.py  connector.py  goal_tracker.py  mission_exec.py
inorbit_omron_connector/src/config/: __init__.py  fleet_config_loader.py  models.py
inorbit_omron_connector/src/mission/: __init__.py  behavior_tree.py  tree_builder.py
tests/: conftest.py  test_arcl_client.py  test_command_handler.py  test_config_models.py  test_connector.py  test_fleet_config_loader.py  test_mission_exec.py
