# SPDX-FileCopyrightText: 2026 Mappalink
#
# SPDX-License-Identifier: MIT

[project]
name = "inorbit-omron-connector"
version = "0.1.15"
description = "InOrbit Edge connector for Omron HD1500 AMRs via ARCL"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
    { name = "Mappalink", email = "gerben@mappalink.com" },
]
maintainers = [
    { name = "Mappalink", email = "gerben@mappalink.com" },
]
keywords = ["inorbit", "connector", "edge-connector", "robotics", "robops", "omron", "arcl"]
classifiers = [
    "Topic :: Scientific/Engineering",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "inorbit-connector[system-stats]~=2.2.0",
    "inorbit-edge-executor>=3.2,<4",
    "pydantic>=2.11,<3",
    "pydantic-settings>=2.11,<3",
]

[project.urls]
Homepage = "https://github.com/mappalink/inorbit-omron-connector"
Documentation = "https://github.com/mappalink/inorbit-omron-connector#readme"
Repository = "https://github.com/mappalink/inorbit-omron-connector"
Issues = "https://github.com/mappalink/inorbit-omron-connector/issues"

[project.optional-dependencies]
dev = [
    "coverage~=7.11",
    "pytest~=8.4",
    "pytest-asyncio~=1.2",
    "tox~=4.32",
    "tox-uv~=1.29",
    "colorlog~=6.10.1",
    "ruff>=0.14.7",
    "bump-my-version~=1.2.4",
]

[project.scripts]
inorbit-omron-connector = "inorbit_omron_connector.inorbit_omron_connector:start"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["inorbit_omron_connector"]

[tool.coverage.run]
source = ["inorbit_omron_connector/"]

[tool.coverage.report]
fail_under = 0

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"

[tool.tox]
env_list = ["py312"]

[tool.tox.gh]
python = { "3.12" = "py312" }

[tool.tox.env_run_base]
extras = ["dev"]
commands = [
    [
        "ruff",
        "check",
    ],
    [
        "coverage",
        "run",
        "-m",
        "pytest",
    ],
    [
        "coverage",
        "html",
        "-d",
        "{envlogdir}/coverage",
    ],
]
